Se agrega la versión responsive para dispositivos móviles

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="oferta-precio">
                     <p class="precio">$930<span>/mes</span></p>
                 </div>
-                <button class="suscribite-button" data-plan="Solo Clarín Digital">Suscribite</button>
+                <button class="suscribite-button" data-plan="Solo Clarín Digital">Suscribirme</button>
                 <div class="acordeon">
                     <button class="acordeon-btn">
                         Ver detalle <span class="acordeon-flecha">▼</span>
@@ -150,7 +150,7 @@
                 <div class="oferta-precio">
                     <p class="precio">$1.090<span>/mes</span></p>
                 </div>
-                <button class="suscribite-button" data-plan="Clarin 365">Suscribite</button>
+                <button class="suscribite-button" data-plan="Clarin 365">Suscribirme</button>
                 <div class="acordeon">
                     <button class="acordeon-btn">
                         Ver detalle <span class="acordeon-flecha">▼</span>
@@ -175,7 +175,7 @@
                 <div class="oferta-precio">
                     <p class="precio">$1.230<span>/mes</span></p>
                 </div>
-                <button class="suscribite-button" data-plan="Clarin 365 Plus">Suscribite</button>
+                <button class="suscribite-button" data-plan="Clarin 365 Plus">Suscribirme</button>
                 <div class="acordeon">
                     <button class="acordeon-btn">
                         Ver detalle <span class="acordeon-flecha">▼</span>
