--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@
                         </div>
         
                         <div class="campo-formulario">
-                            <label for="genero">Género*</label>
-                            <select name="genero" id="genero" required>
-                                <option value="">Seleccionar género</option>
-                                <option value="femenino">Femenino</option>
-                                <option value="masculino">Masculino</option>
-                                <option value="otro">Otro</option>
-                            </select>
-                        </div>
+    <label for="genero">Género</label>  <select name="genero" id="genero"> <option value="">Seleccionar género</option>
+        <option value="femenino">Femenino</option>
+        <option value="masculino">Masculino</option>
+        <option value="otro">Otro</option>
+    </select>
+</div>
                         
                         <div class="campo-formulario">
                             <p class="pregunta-oferta">¿Qué oferta te interesa?*</p>
